--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,60 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="principal.com.mediostecnologicos.MainActivity">
+    tools:context="principal.com.mediostecnologicos.LoginActivity">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/linearLayout"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="124dp">
+        android:layout_marginBottom="107dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Regístrese a continuación"
+            android:text="Ingrese sus credenciales a continuación"
             android:textAlignment="center"
             android:layout_above="@+id/linearLayout"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
         <EditText
-            android:layout_margin="15dp"
-            android:inputType="textEmailAddress"
-            android:hint="Ingrese su email"
-            android:id="@+id/editTextEmailLogin"
+            android:id="@+id/editTextEmailIngresar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:hint="Ingrese su email"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:layout_margin="15dp"
             android:inputType="textPassword"
             android:hint="Ingrese su password"
-            android:id="@+id/editTextEmailPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        
-        <Button
-            android:layout_margin="15dp"
-            android:id="@+id/botonRegistrar"
-            android:text="Registrar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        
-        <TextView
-            android:textAlignment="center"
-            android:text="¿Ya está registrado? Ingrese aquí"
-            android:id="@+id/textViewIngresar"
+            android:id="@+id/editTextPasswordIngresar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-    </LinearLayout>
+        <Button
+            android:layout_margin="15dp"
+            android:id="@+id/botonIngresar"
+            android:text="Ingresar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="¿No tiene una cuenta? Regístrese aquí"
+            android:textAlignment="center"
+            android:id="@+id/textViewRegistrarse"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/linearLayout"
+            android:layout_centerHorizontal="true" />
+
+        </LinearLayout>
 
 </RelativeLayout>
